--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weatherapp",
   "version": "1.0.0",
-  "description": "C4Q code challenge",
+  "description": "A simple weather app",
   "main": "app.jsx",
   "scripts": {
     "start": "brunch watch --server",
